# logto-rs

./: Cargo.toml  README.md
src/: lib.rs
src/client/: mod.rs
src/core/: fetch_token.rs  mod.rs  oicd_config.rs  revoke.rs  sign_in.rs  sign_out.rs
src/utils/: decode_id_token.rs  generators.rs  mod.rs  verify_and_parse_code_from_callback_uri.rs  verify_id_token.rs
