[package]
authors = ["Caio Gomes <caiocodes@proton.me>"]
name = "logto-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://logto.io/"
repository = "https://github.com/caioluis/logto-rs"
description = "🦀 Logto Rust Unofficial SDKs"
readme = "README.md"
keywords = ["authentication", "authorization", "sdk", "logto"]
categories = ["api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.77"
base64 = "0.21.5"
josekit = "0.8.4"
jsonwebtoken = "9.2.0"
mockito = "1.2.0"
openssl = "0.10.62"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = "1.35.1"
